Line + ThreePointCircleBrush NEEDS TESTING